Fix service numbering, images, and build QA

--- a/en/index.html
+++ b/en/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>alpiK — Home</title>
     <link rel="stylesheet" href="/style.css">
+    <link rel="icon" href="/img/logo1.png" type="image/png">
+    <link rel="apple-touch-icon" href="/img/logo1.png">
 <!-- i18n-seo:start -->
 <link rel="canonical" href="https://alpik.com.ua/en/">
 <link rel="alternate" hreflang="uk" href="https://alpik.com.ua/">
@@ -51,9 +53,9 @@
         <section class="hero-block">
             <div class="hero-bg"></div>
             <div class="container hero-inner">
-                <h1 class="hero-title">High-quality work at height</h1>
-                <p class="hero-subtitle">Clients appreciate the professionalism of “alpiK”,<br>because our relationships are built on
-                    partnership and trust</p>
+                <h1 class="hero-title">Rope access work of any complexity — when others can’t, we get it done</h1>
+                <p class="hero-subtitle">Facade work, industrial rope access, installation and dismantling at height.<br>
+                    We work where others refuse.</p>
                 <div class="hero-divider" aria-hidden="true"><span></span></div>
                 <div class="hero-actions">
                     <a href="/en/contacts/" class="hero-btn hero-btn-outline">CONTACT US</a>
@@ -68,7 +70,7 @@
                 <div class="services-list">
                     <div class="service-item">
                         <div class="service-img">
-                            <img src="/img/montzah.png" alt="Installation" loading="lazy">
+                            <img src="/img/montazh.png" alt="Installation" loading="lazy">
                         </div>
                         <h3>Installation</h3>
                         <p>gutter systems, flashings, glazing systems, and more</p>
@@ -93,7 +95,7 @@
                     </div>
                     <div class="service-item">
                         <div class="service-img">
-                            <img src="/img/remont.png" alt="Repair" loading="lazy">
+                                <img src="/img/repair-1.png?v=20260115" alt="Repair" loading="lazy">
                         </div>
                         <h3>Repair</h3>
                         <p>chimneys, grain elevators, silos, and more</p>
@@ -101,7 +103,7 @@
                     </div>
                     <div class="service-item">
                         <div class="service-img">
-                            <img src="/img/cleaning-snow.png" alt="Roof cleaning" loading="lazy">
+                            <img src="/img/11.jpg?v=20260115" alt="Roof cleaning" loading="lazy">
                         </div>
                         <h3>Roof cleaning</h3>
                         <p>From snow, icicles, leaves and other debris.</p>
