--- a/en/montage.html
+++ b/en/montage.html
@@ -50,7 +50,7 @@
 
     <main>
         <section class="hero-block" aria-label="Installation works">
-            <div class="hero-bg" style="background: linear-gradient(120deg, rgba(0,0,0,0.78) 0%, rgba(0,0,0,0.64) 62%, rgba(255,230,0,0.32) 100%), url('/img/services-03.jpg') center/cover no-repeat; filter: grayscale(1);"></div>
+            <div class="hero-bg" style="background: linear-gradient(120deg, rgba(0,0,0,0.78) 0%, rgba(0,0,0,0.64) 62%, rgba(255,230,0,0.32) 100%), url('/img/montazh.png') center/cover no-repeat; filter: grayscale(1);"></div>
             <div class="container hero-inner">
                 <div class="hero-kicker">Service</div>
                 <h1 class="hero-title">Installation works</h1>
@@ -69,28 +69,32 @@
                 <p class="services-catalog-lead">Choose the type of installation — we’ll recommend the best approach and provide an estimate.</p>
 
                 <div class="services-catalog services-catalog--uniform" role="list">
-                    <a class="services-catalog-card" role="listitem" href="/en/service-03/" aria-label="Installation of chimneys & air ducts">
-                        <div class="services-catalog-num">01</div>
+                    <a class="services-catalog-card" style="--service-thumb: url('/img/montazh-1.png');" role="listitem" href="/en/service-03/" aria-label="Installation of chimneys & air ducts">
+                        <div class="services-catalog-num">02</div>
                         <h3 class="services-catalog-title">Installation of chimneys & air ducts</h3>
                     </a>
-                    <a class="services-catalog-card" role="listitem" href="/en/service-07/" aria-label="Gutters, flashings & snow-melting systems">
-                        <div class="services-catalog-num">02</div>
+                    <a class="services-catalog-card" style="--service-thumb: url('/img/montazh-2.png');" role="listitem" href="/en/service-07/" aria-label="Gutters, flashings & snow-melting systems">
+                        <div class="services-catalog-num">06</div>
                         <h3 class="services-catalog-title">Gutters, flashings & snow-melting systems</h3>
                     </a>
-                    <a class="services-catalog-card" role="listitem" href="/en/service-09/" aria-label="Ventilated facade systems installation">
-                        <div class="services-catalog-num">03</div>
+                    <a class="services-catalog-card" style="--service-thumb: url('/img/montazh-3.png');" role="listitem" href="/en/service-09/" aria-label="Ventilated facade systems installation">
+                        <div class="services-catalog-num">08</div>
                         <h3 class="services-catalog-title">Ventilated facade systems installation</h3>
                     </a>
-                    <a class="services-catalog-card" role="listitem" href="/en/service-10/" aria-label="Translucent structures installation">
-                        <div class="services-catalog-num">04</div>
+                    <a class="services-catalog-card" style="--service-thumb: url('/img/montazh-4.png');" role="listitem" href="/en/service-10/" aria-label="Translucent structures installation">
+                        <div class="services-catalog-num">09</div>
                         <h3 class="services-catalog-title">Translucent structures installation</h3>
                     </a>
-                    <a class="services-catalog-card" role="listitem" href="/en/service-13/" aria-label="Advertising structures & banner installation">
-                        <div class="services-catalog-num">05</div>
+                    <a class="services-catalog-card" style="--service-thumb: url('/img/montazh-5.png');" role="listitem" href="/en/service-13/" aria-label="Advertising structures & banner installation">
+                        <div class="services-catalog-num">10</div>
                         <h3 class="services-catalog-title">Advertising structures & banner installation</h3>
                     </a>
-                    <a class="services-catalog-card" role="listitem" href="/en/service-18/" aria-label="Decorations & lighting installation">
-                        <div class="services-catalog-num">06</div>
+                    <a class="services-catalog-card" style="--service-thumb: url('/img/17.jpg?v=20260115');" role="listitem" href="/en/service-17/" aria-label="Power cable installation">
+                        <div class="services-catalog-num">14</div>
+                        <h3 class="services-catalog-title">Power cable installation</h3>
+                    </a>
+                    <a class="services-catalog-card" style="--service-thumb: url('/img/montazh-6.png');" role="listitem" href="/en/service-18/" aria-label="Decorations & lighting installation">
+                        <div class="services-catalog-num">15</div>
                         <h3 class="services-catalog-title">Decorations & lighting installation</h3>
                     </a>
                 </div>
