--- a/en/our-services.html
+++ b/en/our-services.html
@@ -62,67 +62,67 @@
                 <h2 class="section-title">Services list</h2>
                 <p class="services-catalog-lead">Choose a service — we’ll recommend the best approach and provide a cost estimate.</p>
 
-                <div class="services-catalog services-catalog--uniform" role="list">
+                <div class="services-catalog" role="list">
 
 
-                    <a class="services-catalog-card" role="listitem" href="/en/service-02/" aria-label="Chimney stack repair & modernization">
+                    <a class="services-catalog-card" style="--service-thumb: url('/img/1.jpg?v=20260115');" role="listitem" href="/en/service-02/" aria-label="Chimney stack repair & modernization">
                         <div class="services-catalog-num">01</div>
                         <h3 class="services-catalog-title">Chimney stack repair & modernization</h3>
                     </a>
-                    <a class="services-catalog-card" role="listitem" href="/en/service-03/" aria-label="Installation of chimneys & air ducts">
+                    <a class="services-catalog-card" style="--service-thumb: url('/img/montazh-1.png');" role="listitem" href="/en/service-03/" aria-label="Installation of chimneys & air ducts">
                         <div class="services-catalog-num">02</div>
                         <h3 class="services-catalog-title">Installation of chimneys & air ducts</h3>
                     </a>
-                    <a class="services-catalog-card" role="listitem" href="/en/service-04/" aria-label="Demolition of chimneys & steel structures">
+                    <a class="services-catalog-card" style="--service-thumb: url('/img/3.jpg?v=20260115');" role="listitem" href="/en/service-04/" aria-label="Demolition of chimneys & steel structures">
                         <div class="services-catalog-num">03</div>
                         <h3 class="services-catalog-title">Demolition of chimneys & steel structures</h3>
                     </a>
-                    <a class="services-catalog-card" role="listitem" href="/en/service-05/" aria-label="Grain elevator overhaul: silo cleaning & repair">
+                    <a class="services-catalog-card" style="--service-thumb: url('/img/4.jpg?v=20260115');" role="listitem" href="/en/service-05/" aria-label="Grain elevator overhaul: silo cleaning & repair">
                         <div class="services-catalog-num">04</div>
                         <h3 class="services-catalog-title">Grain elevator overhaul: silo cleaning & repair</h3>
                     </a>
 
-                    <a class="services-catalog-card" role="listitem" href="/en/service-06/" aria-label="Roof repair & painting">
+                    <a class="services-catalog-card" style="--service-thumb: url('/img/5.jpg?v=20260115');" role="listitem" href="/en/service-06/" aria-label="Roof repair & painting">
                         <div class="services-catalog-num">05</div>
                         <h3 class="services-catalog-title">Roof repair & painting</h3>
                     </a>
-                    <a class="services-catalog-card" role="listitem" href="/en/service-07/" aria-label="Gutters, flashings & snow-melting systems">
+                    <a class="services-catalog-card" style="--service-thumb: url('/img/montazh-2.png');" role="listitem" href="/en/service-07/" aria-label="Gutters, flashings & snow-melting systems">
                         <div class="services-catalog-num">06</div>
                         <h3 class="services-catalog-title">Gutters, flashings & snow-melting systems</h3>
                     </a>
-                    <a class="services-catalog-card" role="listitem" href="/en/service-08/" aria-label="Steel structure painting & sandblasting">
+                    <a class="services-catalog-card" style="--service-thumb: url('/img/7.jpg?v=20260115');" role="listitem" href="/en/service-08/" aria-label="Steel structure painting & sandblasting">
                         <div class="services-catalog-num">07</div>
                         <h3 class="services-catalog-title">Steel structure painting & sandblasting</h3>
                     </a>
-                    <a class="services-catalog-card" role="listitem" href="/en/service-09/" aria-label="Ventilated facade systems installation">
+                    <a class="services-catalog-card" style="--service-thumb: url('/img/montazh-3.png');" role="listitem" href="/en/service-09/" aria-label="Ventilated facade systems installation">
                         <div class="services-catalog-num">08</div>
                         <h3 class="services-catalog-title">Ventilated facade systems installation</h3>
                     </a>
-                    <a class="services-catalog-card" role="listitem" href="/en/service-10/" aria-label="Translucent structures installation">
+                    <a class="services-catalog-card" style="--service-thumb: url('/img/montazh-4.png');" role="listitem" href="/en/service-10/" aria-label="Translucent structures installation">
                         <div class="services-catalog-num">09</div>
                         <h3 class="services-catalog-title">Translucent structures installation</h3>
                     </a>
-                    <a class="services-catalog-card" role="listitem" href="/en/service-13/" aria-label="Advertising structures & banner installation">
+                    <a class="services-catalog-card" style="--service-thumb: url('/img/montazh-5.png');" role="listitem" href="/en/service-13/" aria-label="Advertising structures & banner installation">
                         <div class="services-catalog-num">10</div>
                         <h3 class="services-catalog-title">Advertising structures & banner installation</h3>
                     </a>
-                    <a class="services-catalog-card" role="listitem" href="/en/service-14/" aria-label="Snow, icicle & ice removal">
+                    <a class="services-catalog-card" style="--service-thumb: url('/img/11.jpg?v=20260115');" role="listitem" href="/en/service-14/" aria-label="Snow, icicle & ice removal">
                         <div class="services-catalog-num">11</div>
                         <h3 class="services-catalog-title">Snow, icicle & ice removal</h3>
                     </a>
-                    <a class="services-catalog-card" role="listitem" href="/en/service-15/" aria-label="Facade & window washing (incl. industrial sites)">
+                    <a class="services-catalog-card" style="--service-thumb: url('/img/12.jpg?v=20260115');" role="listitem" href="/en/service-15/" aria-label="Facade & window washing (incl. industrial sites)">
                         <div class="services-catalog-num">12</div>
                         <h3 class="services-catalog-title">Facade & window washing (incl. industrial sites)</h3>
                     </a>
-                    <a class="services-catalog-card" role="listitem" href="/en/service-16/" aria-label="Solar panels & inverter installation">
+                    <a class="services-catalog-card" style="--service-thumb: url('/img/13.jpg?v=20260115');" role="listitem" href="/en/service-16/" aria-label="Solar panels & inverter installation">
                         <div class="services-catalog-num">13</div>
                         <h3 class="services-catalog-title">Solar panels & inverter installation</h3>
                     </a>
-                    <a class="services-catalog-card" role="listitem" href="/en/service-17/" aria-label="Sealing interpanel joints">
+                    <a class="services-catalog-card" style="--service-thumb: url('/img/17.jpg?v=20260115');" role="listitem" href="/en/service-17/" aria-label="Power cable installation">
                         <div class="services-catalog-num">14</div>
-                        <h3 class="services-catalog-title">Sealing interpanel joints</h3>
+                        <h3 class="services-catalog-title">Power cable installation</h3>
                     </a>
-                    <a class="services-catalog-card" role="listitem" href="/en/service-18/" aria-label="Decorations & lighting installation">
+                    <a class="services-catalog-card" style="--service-thumb: url('/img/montazh-6.png');" role="listitem" href="/en/service-18/" aria-label="Decorations & lighting installation">
                         <div class="services-catalog-num">15</div>
                         <h3 class="services-catalog-title">Decorations & lighting installation</h3>
                     </a>
