--- a/en/repair.html
+++ b/en/repair.html
@@ -50,7 +50,7 @@
 
     <main>
         <section class="hero-block" aria-label="Repair works">
-            <div class="hero-bg" style="background: linear-gradient(120deg, rgba(0,0,0,0.78) 0%, rgba(0,0,0,0.64) 62%, rgba(255,230,0,0.32) 100%), url('/img/2.jpg') center/cover no-repeat; filter: grayscale(1);"></div>
+            <div class="hero-bg" style="background: linear-gradient(120deg, rgba(0,0,0,0.78) 0%, rgba(0,0,0,0.64) 62%, rgba(255,230,0,0.32) 100%), url('/img/5.jpg?v=20260115') center/cover no-repeat; filter: grayscale(1);"></div>
             <div class="container hero-inner">
                 <div class="hero-kicker">Service</div>
                 <h1 class="hero-title">Repair works</h1>
@@ -69,21 +69,17 @@
                 <p class="services-catalog-lead">Choose the type of repair — we’ll recommend the best approach and provide an estimate.</p>
 
                 <div class="services-catalog services-catalog--uniform" role="list">
-                    <a class="services-catalog-card" role="listitem" href="/en/service-02/" aria-label="Chimney stack repair & modernization">
+                    <a class="services-catalog-card" style="--service-thumb: url('/img/1.jpg?v=20260115');" role="listitem" href="/en/service-02/" aria-label="Chimney stack repair & modernization">
                         <div class="services-catalog-num">01</div>
                         <h3 class="services-catalog-title">Chimney stack repair & modernization</h3>
                     </a>
-                    <a class="services-catalog-card" role="listitem" href="/en/service-05/" aria-label="Grain elevator overhaul: silo cleaning & repair">
-                        <div class="services-catalog-num">02</div>
+                    <a class="services-catalog-card" style="--service-thumb: url('/img/4.jpg?v=20260115');" role="listitem" href="/en/service-05/" aria-label="Grain elevator overhaul: silo cleaning & repair">
+                        <div class="services-catalog-num">04</div>
                         <h3 class="services-catalog-title">Grain elevator overhaul: silo cleaning & repair</h3>
                     </a>
-                    <a class="services-catalog-card" role="listitem" href="/en/service-06/" aria-label="Roof repair & painting">
-                        <div class="services-catalog-num">03</div>
+                    <a class="services-catalog-card" style="--service-thumb: url('/img/5.jpg?v=20260115');" role="listitem" href="/en/service-06/" aria-label="Roof repair & painting">
+                        <div class="services-catalog-num">05</div>
                         <h3 class="services-catalog-title">Roof repair & painting</h3>
-                    </a>
-                    <a class="services-catalog-card" role="listitem" href="/en/service-17/" aria-label="Sealing interpanel joints">
-                        <div class="services-catalog-num">04</div>
-                        <h3 class="services-catalog-title">Sealing interpanel joints</h3>
                     </a>
                 </div>
             </div>
