--- a/en/service-17.html
+++ b/en/service-17.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sealing interpanel joints — alpiK</title>
+    <title>Power cable installation — alpiK</title>
     <link rel="stylesheet" href="/style.css">
 <!-- i18n-seo:start -->
 <link rel="canonical" href="https://alpik.com.ua/en/service-17/">
@@ -48,12 +48,12 @@
 
     <main>
         <section class="hero-block" aria-label="Service">
-            <div class="hero-bg" style="background: linear-gradient(120deg, rgba(0,0,0,0.78) 0%, rgba(0,0,0,0.64) 62%, rgba(255,230,0,0.32) 100%), url('/img/17.jpg') center/cover no-repeat; filter: grayscale(1);"></div>
+            <div class="hero-bg" style="background: linear-gradient(120deg, rgba(0,0,0,0.78) 0%, rgba(0,0,0,0.64) 62%, rgba(255,230,0,0.32) 100%), url('/img/17.jpg?v=20260115') center/cover no-repeat; filter: grayscale(1);"></div>
             <div class="container hero-inner">
-                <div class="hero-kicker">Service 17</div>
-                <h1 class="hero-title">Sealing interpanel joints</h1>
+                <div class="hero-kicker">Service 14</div>
+                <h1 class="hero-title">Power cable installation</h1>
                 <div class="hero-divider" aria-hidden="true"><span></span></div>
-                <p class="hero-subtitle">We restore tightness of facade joints to prevent drafts, moisture and heat losses.</p>
+                <p class="hero-subtitle">Cable routing and secure fastening on facades and industrial structures with strict safety compliance.</p>
                 <div class="hero-actions">
                     <a href="/en/our-services/" class="hero-btn hero-btn-outline">ALL SERVICES</a>
                     <a href="/en/contacts/" class="hero-btn hero-btn-fill">REQUEST A CONSULTATION</a>
@@ -63,10 +63,10 @@
 
         <section class="service-details" aria-label="Service details">
             <div class="container">
-                <h2 class="section-title">17. Sealing interpanel joints</h2>
+                <h2 class="section-title">17. Power cable installation</h2>
                 <div class="service-prose">
-                    <p>We seal interpanel joints on residential and industrial buildings to protect from moisture penetration, drafts and heat loss.</p>
-                    <p>Works include cleaning the seam, replacing/adding insulation, applying sealant and protective layers for long‑term tightness.</p>
+                    <p>Power cable installation at height requires careful route planning, reliable fastening and strict safety measures. We work where aerial lifts are hard to use, using rope access when needed.</p>
+                    <p>We provide neat cable routing along facades and steel structures, install mounts and organize safe pass‑throughs so the line is protected from mechanical damage and weather exposure.</p>
                 </div>
                 <div class="section-actions">
                     <a href="/en/contacts/" class="btn">Contact us</a>
