--- a/montage.html
+++ b/montage.html
@@ -50,7 +50,7 @@
 
     <main>
         <section class="hero-block" aria-label="Монтажні роботи">
-            <div class="hero-bg" style="background: linear-gradient(120deg, rgba(0,0,0,0.78) 0%, rgba(0,0,0,0.64) 62%, rgba(255,230,0,0.32) 100%), url('/img/services-03.jpg') center/cover no-repeat; filter: grayscale(1);"></div>
+            <div class="hero-bg" style="background: linear-gradient(120deg, rgba(0,0,0,0.78) 0%, rgba(0,0,0,0.64) 62%, rgba(255,230,0,0.32) 100%), url('/img/montazh.png') center/cover no-repeat; filter: grayscale(1);"></div>
             <div class="container hero-inner">
                 <div class="hero-kicker">Послуга</div>
                 <h1 class="hero-title">Монтажні роботи</h1>
@@ -69,28 +69,32 @@
                 <p class="services-catalog-lead">Оберіть напрямок монтажу — підкажемо оптимальне рішення і прорахуємо вартість.</p>
 
                 <div class="services-catalog services-catalog--uniform" role="list">
-                    <a class="services-catalog-card" role="listitem" href="/service-03/" aria-label="Монтаж димоходів і повітропроводів">
-                        <div class="services-catalog-num">01</div>
+                    <a class="services-catalog-card" style="--service-thumb: url('/img/montazh-1.png');" role="listitem" href="/service-03/" aria-label="Монтаж димоходів і повітропроводів">
+                        <div class="services-catalog-num">02</div>
                         <h3 class="services-catalog-title">Монтаж димоходів і повітропроводів</h3>
                     </a>
-                    <a class="services-catalog-card" role="listitem" href="/service-07/" aria-label="Монтаж водостічних систем, відливів та систем сніготанення">
-                        <div class="services-catalog-num">02</div>
+                    <a class="services-catalog-card" style="--service-thumb: url('/img/montazh-2.png');" role="listitem" href="/service-07/" aria-label="Монтаж водостічних систем, відливів та систем сніготанення">
+                        <div class="services-catalog-num">06</div>
                         <h3 class="services-catalog-title">Монтаж водостічних систем, відливів та систем сніготанення</h3>
                     </a>
-                    <a class="services-catalog-card" role="listitem" href="/service-09/" aria-label="Монтаж вентильованих фасадних систем">
-                        <div class="services-catalog-num">03</div>
+                    <a class="services-catalog-card" style="--service-thumb: url('/img/montazh-3.png');" role="listitem" href="/service-09/" aria-label="Монтаж вентильованих фасадних систем">
+                        <div class="services-catalog-num">08</div>
                         <h3 class="services-catalog-title">Монтаж вентильованих фасадних систем</h3>
                     </a>
-                    <a class="services-catalog-card" role="listitem" href="/service-10/" aria-label="Монтаж світлопрозорих конструкцій">
-                        <div class="services-catalog-num">04</div>
+                    <a class="services-catalog-card" style="--service-thumb: url('/img/montazh-4.png');" role="listitem" href="/service-10/" aria-label="Монтаж світлопрозорих конструкцій">
+                        <div class="services-catalog-num">09</div>
                         <h3 class="services-catalog-title">Монтаж світлопрозорих конструкцій</h3>
                     </a>
-                    <a class="services-catalog-card" role="listitem" href="/service-13/" aria-label="Монтаж рекламних конструкцій, навішування банерів">
-                        <div class="services-catalog-num">05</div>
+                    <a class="services-catalog-card" style="--service-thumb: url('/img/montazh-5.png');" role="listitem" href="/service-13/" aria-label="Монтаж рекламних конструкцій, навішування банерів">
+                        <div class="services-catalog-num">10</div>
                         <h3 class="services-catalog-title">Монтаж рекламних конструкцій, навішування банерів</h3>
                     </a>
-                    <a class="services-catalog-card" role="listitem" href="/service-18/" aria-label="Монтаж декорацій і освітлення">
-                        <div class="services-catalog-num">06</div>
+                    <a class="services-catalog-card" style="--service-thumb: url('/img/17.jpg?v=20260115');" role="listitem" href="/service-17/" aria-label="Монтаж силового кабелю">
+                        <div class="services-catalog-num">14</div>
+                        <h3 class="services-catalog-title">Монтаж силового кабелю</h3>
+                    </a>
+                    <a class="services-catalog-card" style="--service-thumb: url('/img/montazh-6.png');" role="listitem" href="/service-18/" aria-label="Монтаж декорацій і освітлення">
+                        <div class="services-catalog-num">15</div>
                         <h3 class="services-catalog-title">Монтаж декорацій і освітлення</h3>
                     </a>
                 </div>
