--- a/our-projects.html
+++ b/our-projects.html
@@ -51,10 +51,10 @@
                 <h1>Наші проекти</h1>
                 <p>Тут буде галерея реалізованих проектів з фото-заглушками.</p>
                 <div class="gallery-list">
-                    <img src="/img/gallery1.jpg" alt="Проект 1">
-                    <img src="/img/gallery2.jpg" alt="Проект 2">
-                    <img src="/img/gallery3.jpg" alt="Проект 3">
-                    <img src="/img/gallery4.jpg" alt="Проект 4">
+                    <img src="/img/montazh.png" alt="Проект 1">
+                    <img src="/img/repair-1.png" alt="Проект 2">
+                    <img src="/img/paneli.jpg" alt="Проект 3">
+                    <img src="/img/painting.png" alt="Проект 4">
                 </div>
             </div>
         </section>
