--- a/our-services.html
+++ b/our-services.html
@@ -65,67 +65,67 @@
                 <h2 class="section-title">Перелік послуг</h2>
                 <p class="services-catalog-lead">Оберіть напрямок робіт — підкажемо оптимальне рішення і прорахуємо вартість.</p>
 
-                <div class="services-catalog services-catalog--uniform" role="list">
+                <div class="services-catalog" role="list">
 
 
-                    <a class="services-catalog-card" role="listitem" href="/service-02/" aria-label="Ремонт і модернізація димових труб">
+                    <a class="services-catalog-card" style="--service-thumb: url('/img/1.jpg?v=20260115');" role="listitem" href="/service-02/" aria-label="Ремонт і модернізація димових труб">
                         <div class="services-catalog-num">01</div>
                         <h3 class="services-catalog-title">Ремонт і модернізація димових труб</h3>
                     </a>
-                    <a class="services-catalog-card" role="listitem" href="/service-03/" aria-label="Монтаж димоходів і повітропроводів">
+                    <a class="services-catalog-card" style="--service-thumb: url('/img/montazh-1.png');" role="listitem" href="/service-03/" aria-label="Монтаж димоходів і повітропроводів">
                         <div class="services-catalog-num">02</div>
                         <h3 class="services-catalog-title">Монтаж димоходів і повітропроводів</h3>
                     </a>
-                    <a class="services-catalog-card" role="listitem" href="/service-04/" aria-label="Демонтаж димових труб та металоконструкцій">
+                    <a class="services-catalog-card" style="--service-thumb: url('/img/3.jpg?v=20260115');" role="listitem" href="/service-04/" aria-label="Демонтаж димових труб та металоконструкцій">
                         <div class="services-catalog-num">03</div>
                         <h3 class="services-catalog-title">Демонтаж димових труб та металоконструкцій</h3>
                     </a>
-                    <a class="services-catalog-card" role="listitem" href="/service-05/" aria-label="Комплексний ремонт елеваторів; очищення та ремонт силосів">
+                    <a class="services-catalog-card" style="--service-thumb: url('/img/4.jpg?v=20260115');" role="listitem" href="/service-05/" aria-label="Комплексний ремонт елеваторів; очищення та ремонт силосів">
                         <div class="services-catalog-num">04</div>
                         <h3 class="services-catalog-title">Комплексний ремонт елеваторів; очищення та ремонт силосів</h3>
                     </a>
 
-                    <a class="services-catalog-card" role="listitem" href="/service-06/" aria-label="Ремонт і фарбування дахів">
+                    <a class="services-catalog-card" style="--service-thumb: url('/img/5.jpg?v=20260115');" role="listitem" href="/service-06/" aria-label="Ремонт і фарбування дахів">
                         <div class="services-catalog-num">05</div>
                         <h3 class="services-catalog-title">Ремонт і фарбування дахів</h3>
                     </a>
-                    <a class="services-catalog-card" role="listitem" href="/service-07/" aria-label="Монтаж водостічних систем, відливів та систем сніготанення">
+                    <a class="services-catalog-card" style="--service-thumb: url('/img/montazh-2.png');" role="listitem" href="/service-07/" aria-label="Монтаж водостічних систем, відливів та систем сніготанення">
                         <div class="services-catalog-num">06</div>
                         <h3 class="services-catalog-title">Монтаж водостічних систем, відливів та систем сніготанення</h3>
                     </a>
-                    <a class="services-catalog-card" role="listitem" href="/service-08/" aria-label="Фарбування металоконструкцій та піскоструминне очищення поверхонь">
+                    <a class="services-catalog-card" style="--service-thumb: url('/img/7.jpg?v=20260115');" role="listitem" href="/service-08/" aria-label="Фарбування металоконструкцій та піскоструминне очищення поверхонь">
                         <div class="services-catalog-num">07</div>
                         <h3 class="services-catalog-title">Фарбування металоконструкцій та піскоструминне очищення поверхонь</h3>
                     </a>
-                    <a class="services-catalog-card" role="listitem" href="/service-09/" aria-label="Монтаж вентильованих фасадних систем">
+                    <a class="services-catalog-card" style="--service-thumb: url('/img/montazh-3.png');" role="listitem" href="/service-09/" aria-label="Монтаж вентильованих фасадних систем">
                         <div class="services-catalog-num">08</div>
                         <h3 class="services-catalog-title">Монтаж вентильованих фасадних систем</h3>
                     </a>
-                    <a class="services-catalog-card" role="listitem" href="/service-10/" aria-label="Монтаж світлопрозорих конструкцій">
+                    <a class="services-catalog-card" style="--service-thumb: url('/img/montazh-4.png');" role="listitem" href="/service-10/" aria-label="Монтаж світлопрозорих конструкцій">
                         <div class="services-catalog-num">09</div>
                         <h3 class="services-catalog-title">Монтаж світлопрозорих конструкцій</h3>
                     </a>
-                    <a class="services-catalog-card" role="listitem" href="/service-13/" aria-label="Монтаж рекламних конструкцій, навішування банерів">
+                    <a class="services-catalog-card" style="--service-thumb: url('/img/montazh-5.png');" role="listitem" href="/service-13/" aria-label="Монтаж рекламних конструкцій, навішування банерів">
                         <div class="services-catalog-num">10</div>
                         <h3 class="services-catalog-title">Монтаж рекламних конструкцій, навішування банерів</h3>
                     </a>
-                    <a class="services-catalog-card" role="listitem" href="/service-14/" aria-label="Очищення снігу, бурульок і наледі з покрівлі та конструкцій">
+                    <a class="services-catalog-card" style="--service-thumb: url('/img/11.jpg?v=20260115');" role="listitem" href="/service-14/" aria-label="Очищення снігу, бурульок і наледі з покрівлі та конструкцій">
                         <div class="services-catalog-num">11</div>
                         <h3 class="services-catalog-title">Очищення снігу, бурульок і наледі з покрівлі та конструкцій</h3>
                     </a>
-                    <a class="services-catalog-card" role="listitem" href="/service-15/" aria-label="Миття фасадів будівель, вікон та промислових цехів">
+                    <a class="services-catalog-card" style="--service-thumb: url('/img/12.jpg?v=20260115');" role="listitem" href="/service-15/" aria-label="Миття фасадів будівель, вікон та промислових цехів">
                         <div class="services-catalog-num">12</div>
                         <h3 class="services-catalog-title">Миття фасадів будівель, вікон та промислових цехів</h3>
                     </a>
-                    <a class="services-catalog-card" role="listitem" href="/service-16/" aria-label="Монтаж сонячних панелей та інверторів">
+                    <a class="services-catalog-card" style="--service-thumb: url('/img/13.jpg?v=20260115');" role="listitem" href="/service-16/" aria-label="Монтаж сонячних панелей та інверторів">
                         <div class="services-catalog-num">13</div>
                         <h3 class="services-catalog-title">Монтаж сонячних панелей та інверторів</h3>
                     </a>
-                    <a class="services-catalog-card" role="listitem" href="/service-17/" aria-label="Герметизація міжпанельних швів">
+                    <a class="services-catalog-card" style="--service-thumb: url('/img/17.jpg?v=20260115');" role="listitem" href="/service-17/" aria-label="Монтаж силового кабелю">
                         <div class="services-catalog-num">14</div>
-                        <h3 class="services-catalog-title">Герметизація міжпанельних швів</h3>
+                        <h3 class="services-catalog-title">Монтаж силового кабелю</h3>
                     </a>
-                    <a class="services-catalog-card" role="listitem" href="/service-18/" aria-label="Монтаж декорацій і освітлення">
+                    <a class="services-catalog-card" style="--service-thumb: url('/img/montazh-6.png');" role="listitem" href="/service-18/" aria-label="Монтаж декорацій і освітлення">
                         <div class="services-catalog-num">15</div>
                         <h3 class="services-catalog-title">Монтаж декорацій і освітлення</h3>
                     </a>
