--- a/service-02.html
+++ b/service-02.html
@@ -48,9 +48,9 @@
 
     <main>
         <section class="hero-block" aria-label="Послуга">
-            <div class="hero-bg" style="background: linear-gradient(120deg, rgba(0,0,0,0.78) 0%, rgba(0,0,0,0.64) 62%, rgba(255,230,0,0.32) 100%), url('/img/2.jpg') center/cover no-repeat; filter: grayscale(1);"></div>
+            <div class="hero-bg" style="background: linear-gradient(120deg, rgba(0,0,0,0.78) 0%, rgba(0,0,0,0.64) 62%, rgba(255,230,0,0.32) 100%), url('/img/1.jpg?v=20260115') center/cover no-repeat; filter: grayscale(1);"></div>
             <div class="container hero-inner">
-                <div class="hero-kicker">Послуга 02</div>
+                <div class="hero-kicker">Послуга 01</div>
                 <h1 class="hero-title">Ремонт і модернізація димових труб</h1>
                 <div class="hero-divider" aria-hidden="true"><span></span></div>
                 <p class="hero-subtitle">Виконуємо діагностику, ремонтні роботи та модернізацію димових труб із дотриманням вимог безпеки.</p>
@@ -63,7 +63,7 @@
 
         <section class="service-details" aria-label="Опис послуги">
             <div class="container">
-                <h2 class="section-title">02. Ремонт і модернізація димових труб</h2>
+                <h2 class="section-title">01. Ремонт і модернізація димових труб</h2>
                 <div class="service-prose">
                     <p>Ремонт димових труб виконується з урахуванням специфіки промислових об’єктів та підвищених вимог до безпеки. На першому етапі проводиться детальне обстеження конструкції з визначенням ступеня зносу, причин руйнування та залишкового ресурсу труби.</p>
                     <p>Роботи виконуються методом промислового альпінізму без зупинки виробничих процесів. Ми здійснюємо відновлення цегляної кладки або металевих елементів, заміну аварійних ділянок, посилення конструкцій, герметизацію швів та стиків. Для ремонту застосовуються вогнетривкі суміші, жаростійкі фарби, антикорозійні покриття та спеціальні захисні матеріали.</p>
