--- a/service-04.html
+++ b/service-04.html
@@ -48,9 +48,9 @@
 
     <main>
         <section class="hero-block" aria-label="Послуга">
-            <div class="hero-bg" style="background: linear-gradient(120deg, rgba(0,0,0,0.78) 0%, rgba(0,0,0,0.64) 62%, rgba(255,230,0,0.32) 100%), url('/img/4.jpg') center/cover no-repeat; filter: grayscale(1);"></div>
+            <div class="hero-bg" style="background: linear-gradient(120deg, rgba(0,0,0,0.78) 0%, rgba(0,0,0,0.64) 62%, rgba(255,230,0,0.32) 100%), url('/img/3.jpg?v=20260115') center/cover no-repeat; filter: grayscale(1);"></div>
             <div class="container hero-inner">
-                <div class="hero-kicker">Послуга 04</div>
+                <div class="hero-kicker">Послуга 03</div>
                 <h1 class="hero-title">Демонтаж димових труб та металоконструкцій</h1>
                 <div class="hero-divider" aria-hidden="true"><span></span></div>
                 <p class="hero-subtitle">Демонтаж на висоті з контрольованим розбиранням, безпечним спуском елементів та організацією робочої зони.</p>
@@ -63,7 +63,7 @@
 
         <section class="service-details" aria-label="Опис послуги">
             <div class="container">
-                <h2 class="section-title">04. Демонтаж димових труб та металоконструкцій</h2>
+                <h2 class="section-title">03. Демонтаж димових труб та металоконструкцій</h2>
                 <div class="service-prose">
                     <p>Демонтаж висотних конструкцій — це складний інженерний процес, який потребує точного планування та досвіду. Перед початком робіт розробляється детальний план демонтажу з урахуванням висоти, матеріалів, навантажень і навколишньої інфраструктури.</p>
                     <p>Роботи виконуються поетапно, зверху вниз, із застосуванням ручного демонтажу, газорізки або механізованого обладнання. Усі елементи конструкцій контрольовано опускаються на землю, що мінімізує ризики пошкодження будівель і забезпечує безпеку людей.</p>
