--- a/service-05.html
+++ b/service-05.html
@@ -48,9 +48,9 @@
 
     <main>
         <section class="hero-block" aria-label="Послуга">
-            <div class="hero-bg" style="background: linear-gradient(120deg, rgba(0,0,0,0.78) 0%, rgba(0,0,0,0.64) 62%, rgba(255,230,0,0.32) 100%), url('/img/5.jpg') center/cover no-repeat; filter: grayscale(1);"></div>
+            <div class="hero-bg" style="background: linear-gradient(120deg, rgba(0,0,0,0.78) 0%, rgba(0,0,0,0.64) 62%, rgba(255,230,0,0.32) 100%), url('/img/4.jpg?v=20260115') center/cover no-repeat; filter: grayscale(1);"></div>
             <div class="container hero-inner">
-                <div class="hero-kicker">Послуга 05</div>
+                <div class="hero-kicker">Послуга 04</div>
                 <h1 class="hero-title">Комплексний ремонт елеваторів, очищення та ремонт силосів</h1>
                 <div class="hero-divider" aria-hidden="true"><span></span></div>
                 <p class="hero-subtitle">Комплексні роботи на промислових об’єктах: очищення, відновлення та ремонт силосів/елеваторів.</p>
@@ -63,7 +63,7 @@
 
         <section class="service-details" aria-label="Опис послуги">
             <div class="container">
-                <h2 class="section-title">05. Комплексний ремонт елеваторів, очищення та ремонт силосів</h2>
+                <h2 class="section-title">04. Комплексний ремонт елеваторів, очищення та ремонт силосів</h2>
                 <div class="service-prose">
                     <p>Ми виконуємо повний спектр робіт з ремонту та обслуговування елеваторів і силосів. Роботи починаються з очищення внутрішніх і зовнішніх поверхонь від зернових залишків, пилу, нальоту та корозії. Проводиться детальне обстеження бетонних і металевих конструкцій.</p>
                     <p>Виконується ремонт тріщин, відновлення захисних шарів, герметизація стиків і фарбування спеціальними антикорозійними матеріалами, дозволеними для харчових об’єктів. Комплексний підхід забезпечує безпечну експлуатацію та відповідність санітарним нормам.</p>
