--- a/service-06.html
+++ b/service-06.html
@@ -48,9 +48,9 @@
 
     <main>
         <section class="hero-block" aria-label="Послуга">
-            <div class="hero-bg" style="background: linear-gradient(120deg, rgba(0,0,0,0.78) 0%, rgba(0,0,0,0.64) 62%, rgba(255,230,0,0.32) 100%), url('/img/10.jpg') center/cover no-repeat; filter: grayscale(1);"></div>
+            <div class="hero-bg" style="background: linear-gradient(120deg, rgba(0,0,0,0.78) 0%, rgba(0,0,0,0.64) 62%, rgba(255,230,0,0.32) 100%), url('/img/5.jpg?v=20260115') center/cover no-repeat; filter: grayscale(1);"></div>
             <div class="container hero-inner">
-                <div class="hero-kicker">Послуга 06</div>
+                <div class="hero-kicker">Послуга 05</div>
                 <h1 class="hero-title">Ремонт і фарбування дахів</h1>
                 <div class="hero-divider" aria-hidden="true"><span></span></div>
                 <p class="hero-subtitle">Виконуємо ремонт покрівель, усуваємо протікання, відновлюємо вузли примикань та фарбуємо покриття для захисту й оновлення вигляду.</p>
@@ -63,7 +63,7 @@
 
         <section class="service-details" aria-label="Опис послуги">
             <div class="container">
-                <h2 class="section-title">06. Ремонт і фарбування дахів</h2>
+                <h2 class="section-title">05. Ремонт і фарбування дахів</h2>
                 <div class="service-prose">
                     <p>Покрівельні роботи виконуються з урахуванням архітектурних і технічних особливостей об’єкта. Ми здійснюємо поточний та капітальний ремонт існуючих дахів, усуваємо протікання та відновлюємо критичні вузли.</p>
                     <p>Роботи можуть включати демонтаж пошкоджених ділянок, відновлення несучих конструкцій, монтаж гідро- та теплоізоляції, облаштування вузлів примикання. Для захисту та оновлення зовнішнього вигляду виконуємо фарбування покриттів і металевих елементів із застосуванням стійких матеріалів.</p>
