--- a/service-07.html
+++ b/service-07.html
@@ -48,9 +48,9 @@
 
     <main>
         <section class="hero-block" aria-label="Послуга">
-            <div class="hero-bg" style="background: linear-gradient(120deg, rgba(0,0,0,0.78) 0%, rgba(0,0,0,0.64) 62%, rgba(255,230,0,0.32) 100%), url('/img/6.jpg') center/cover no-repeat; filter: grayscale(1);"></div>
+            <div class="hero-bg" style="background: linear-gradient(120deg, rgba(0,0,0,0.78) 0%, rgba(0,0,0,0.64) 62%, rgba(255,230,0,0.32) 100%), url('/img/montazh-2.png') center/cover no-repeat; filter: grayscale(1);"></div>
             <div class="container hero-inner">
-                <div class="hero-kicker">Послуга 07</div>
+                <div class="hero-kicker">Послуга 06</div>
                 <h1 class="hero-title">Монтаж водостічних систем, відливів та систем сніготанення</h1>
                 <div class="hero-divider" aria-hidden="true"><span></span></div>
                 <p class="hero-subtitle">Підбираємо рішення та виконуємо монтаж на висоті — з надійними кріпленнями та герметичними вузлами.</p>
@@ -63,7 +63,7 @@
 
         <section class="service-details" aria-label="Опис послуги">
             <div class="container">
-                <h2 class="section-title">07. Монтаж водостічних систем, відливів та систем сніготанення</h2>
+                <h2 class="section-title">06. Монтаж водостічних систем, відливів та систем сніготанення</h2>
                 <div class="service-prose">
                     <p>Ми проєктуємо та монтуємо ефективні системи водовідведення для захисту фасадів і фундаментів будівель. Використовуються оцинковані або ПВХ водостічні системи з антикорозійним покриттям.</p>
                     <p>Системи сніготанення на базі нагрівальних кабелів запобігають утворенню льоду, бурульок і перевантаженню покрівлі. Усі системи тестуються та вводяться в експлуатацію з гарантією надійної роботи.</p>
