--- a/service-08.html
+++ b/service-08.html
@@ -48,9 +48,9 @@
 
     <main>
         <section class="hero-block" aria-label="Послуга">
-            <div class="hero-bg" style="background: linear-gradient(120deg, rgba(0,0,0,0.78) 0%, rgba(0,0,0,0.64) 62%, rgba(255,230,0,0.32) 100%), url('/img/7.jpg') center/cover no-repeat; filter: grayscale(1);"></div>
+            <div class="hero-bg" style="background: linear-gradient(120deg, rgba(0,0,0,0.78) 0%, rgba(0,0,0,0.64) 62%, rgba(255,230,0,0.32) 100%), url('/img/7.jpg?v=20260115') center/cover no-repeat; filter: grayscale(1);"></div>
             <div class="container hero-inner">
-                <div class="hero-kicker">Послуга 08</div>
+                <div class="hero-kicker">Послуга 07</div>
                 <h1 class="hero-title">Фарбування металоконструкцій та піскоструминне очищення поверхонь</h1>
                 <div class="hero-divider" aria-hidden="true"><span></span></div>
                 <p class="hero-subtitle">Готуємо поверхні, очищуємо та наносимо захисні покриття для довговічності й антикорозійного захисту.</p>
@@ -63,7 +63,7 @@
 
         <section class="service-details" aria-label="Опис послуги">
             <div class="container">
-                <h2 class="section-title">08. Фарбування металоконструкцій та піскоструминне очищення поверхонь</h2>
+                <h2 class="section-title">07. Фарбування металоконструкцій та піскоструминне очищення поверхонь</h2>
                 <div class="service-prose">
                     <p>Піскоструминне очищення дозволяє досягти ідеальної адгезії фарбувальних матеріалів. Ми повністю видаляємо іржу, старі покриття та забруднення до чистого металу.</p>
                     <p>Після очищення наноситься антикорозійна ґрунтовка та багатошарові промислові фарби, стійкі до вологи, ультрафіолету, хімічних і механічних впливів. Це значно подовжує термін служби металоконструкцій.</p>
