--- a/service-09.html
+++ b/service-09.html
@@ -48,9 +48,9 @@
 
     <main>
         <section class="hero-block" aria-label="Послуга">
-            <div class="hero-bg" style="background: linear-gradient(120deg, rgba(0,0,0,0.78) 0%, rgba(0,0,0,0.64) 62%, rgba(255,230,0,0.32) 100%), url('/img/8.jpg') center/cover no-repeat; filter: grayscale(1);"></div>
+            <div class="hero-bg" style="background: linear-gradient(120deg, rgba(0,0,0,0.78) 0%, rgba(0,0,0,0.64) 62%, rgba(255,230,0,0.32) 100%), url('/img/montazh-3.png') center/cover no-repeat; filter: grayscale(1);"></div>
             <div class="container hero-inner">
-                <div class="hero-kicker">Послуга 09</div>
+                <div class="hero-kicker">Послуга 08</div>
                 <h1 class="hero-title">Монтаж вентильованих фасадних систем</h1>
                 <div class="hero-divider" aria-hidden="true"><span></span></div>
                 <p class="hero-subtitle">Монтуємо підсистему та облицювання вентфасадів, забезпечуємо геометрію, надійність кріплень і акуратний вигляд.</p>
@@ -63,7 +63,7 @@
 
         <section class="service-details" aria-label="Опис послуги">
             <div class="container">
-                <h2 class="section-title">09. Монтаж вентильованих фасадних систем</h2>
+                <h2 class="section-title">08. Монтаж вентильованих фасадних систем</h2>
                 <div class="service-prose">
                     <p>Монтаж вентильованих фасадів — це сучасне рішення для підвищення енергоефективності та естетики будівель. Роботи включають встановлення металевого каркаса, утеплювача та облицювальних матеріалів з формуванням вентиляційного зазору.</p>
                     <p>Використовуються керамограніт, композитні та фіброцементні панелі. Така система захищає будівлю від вологи, знижує тепловтрати та забезпечує довговічність фасаду.</p>
