--- a/service-10.html
+++ b/service-10.html
@@ -48,9 +48,9 @@
 
     <main>
         <section class="hero-block" aria-label="Послуга">
-            <div class="hero-bg" style="background: linear-gradient(120deg, rgba(0,0,0,0.78) 0%, rgba(0,0,0,0.64) 62%, rgba(255,230,0,0.32) 100%), url('/img/9.jpg') center/cover no-repeat; filter: grayscale(1);"></div>
+            <div class="hero-bg" style="background: linear-gradient(120deg, rgba(0,0,0,0.78) 0%, rgba(0,0,0,0.64) 62%, rgba(255,230,0,0.32) 100%), url('/img/montazh-4.png') center/cover no-repeat; filter: grayscale(1);"></div>
             <div class="container hero-inner">
-                <div class="hero-kicker">Послуга 10</div>
+                <div class="hero-kicker">Послуга 09</div>
                 <h1 class="hero-title">Монтаж світлопрозорих конструкцій</h1>
                 <div class="hero-divider" aria-hidden="true"><span></span></div>
                 <p class="hero-subtitle">Монтуємо скляні/світлопрозорі конструкції на висоті з точністю, герметичністю та дотриманням техніки безпеки.</p>
@@ -63,7 +63,7 @@
 
         <section class="service-details" aria-label="Опис послуги">
             <div class="container">
-                <h2 class="section-title">10. Монтаж світлопрозорих конструкцій</h2>
+                <h2 class="section-title">09. Монтаж світлопрозорих конструкцій</h2>
                 <div class="service-prose">
                     <p>Ми виконуємо монтаж сучасних світлопрозорих фасадних систем, вітражів і зенітних ліхтарів. Використовуються алюмінієві профільні системи та загартоване або ламіноване скло з високими показниками міцності та безпеки.</p>
                     <p>Особлива увага приділяється герметичності, теплоізоляції та точності монтажу, що забезпечує енергоефективність і довговічність конструкцій.</p>
