--- a/service-15.html
+++ b/service-15.html
@@ -48,9 +48,9 @@
 
     <main>
         <section class="hero-block" aria-label="Послуга">
-            <div class="hero-bg" style="background: linear-gradient(120deg, rgba(0,0,0,0.78) 0%, rgba(0,0,0,0.64) 62%, rgba(255,230,0,0.32) 100%), url('/img/15.jpg') center/cover no-repeat; filter: grayscale(1);"></div>
+            <div class="hero-bg" style="background: linear-gradient(120deg, rgba(0,0,0,0.78) 0%, rgba(0,0,0,0.64) 62%, rgba(255,230,0,0.32) 100%), url('/img/12.jpg?v=20260115') center/cover no-repeat; filter: grayscale(1);"></div>
             <div class="container hero-inner">
-                <div class="hero-kicker">Послуга 15</div>
+                <div class="hero-kicker">Послуга 12</div>
                 <h1 class="hero-title">Миття фасадів будівель, вікон та промислових цехів</h1>
                 <div class="hero-divider" aria-hidden="true"><span></span></div>
                 <p class="hero-subtitle">Професійне миття фасадів і вікон на висоті — акуратно, без розводів та з підбором безпечної хімії.</p>
@@ -63,7 +63,7 @@
 
         <section class="service-details" aria-label="Опис послуги">
             <div class="container">
-                <h2 class="section-title">15. Миття фасадів будівель, вікон та промислових цехів</h2>
+                <h2 class="section-title">12. Миття фасадів будівель, вікон та промислових цехів</h2>
                 <div class="service-prose">
                     <p>Миття фасадів виконується з використанням професійного обладнання високого тиску та спеціалізованих мийних засобів. Видаляються всі типи забруднень без шкоди для поверхонь.</p>
                     <p>Ми виконуємо миття фасадів будівель, вікон та промислових цехів. Підбираємо метод (вода/хімія/високий тиск) під тип поверхні та рівень забруднення.</p>
