--- a/service-16.html
+++ b/service-16.html
@@ -48,9 +48,9 @@
 
     <main>
         <section class="hero-block" aria-label="Послуга">
-            <div class="hero-bg" style="background: linear-gradient(120deg, rgba(0,0,0,0.78) 0%, rgba(0,0,0,0.64) 62%, rgba(255,230,0,0.32) 100%), url('/img/16.jpg') center/cover no-repeat; filter: grayscale(1);"></div>
+            <div class="hero-bg" style="background: linear-gradient(120deg, rgba(0,0,0,0.78) 0%, rgba(0,0,0,0.64) 62%, rgba(255,230,0,0.32) 100%), url('/img/13.jpg?v=20260115') center/cover no-repeat; filter: grayscale(1);"></div>
             <div class="container hero-inner">
-                <div class="hero-kicker">Послуга 16</div>
+                <div class="hero-kicker">Послуга 13</div>
                 <h1 class="hero-title">Монтаж сонячних панелей та інверторів</h1>
                 <div class="hero-divider" aria-hidden="true"><span></span></div>
                 <p class="hero-subtitle">Монтуємо сонячні панелі та інвертори на дахах і конструкціях: кріплення, розміщення, акуратне підключення та безпечні роботи на висоті.</p>
@@ -63,7 +63,7 @@
 
         <section class="service-details" aria-label="Опис послуги">
             <div class="container">
-                <h2 class="section-title">16. Монтаж сонячних панелей та інверторів</h2>
+                <h2 class="section-title">13. Монтаж сонячних панелей та інверторів</h2>
                 <div class="service-prose">
                     <p>Виконуємо монтаж сонячних панелей та інверторів на покрівлях і фасадах із застосуванням сертифікованих кріпильних систем. Забезпечуємо надійну фіксацію, акуратне прокладання кабелів, герметичність вузлів та безпечне підключення обладнання.</p>
                 </div>
