--- a/service-17.html
+++ b/service-17.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Герметизація міжпанельних швів — alpiK</title>
+    <title>Монтаж силового кабелю — alpiK</title>
     <link rel="stylesheet" href="/style.css">
 <!-- i18n-seo:start -->
 <link rel="canonical" href="https://alpik.com.ua/service-17/">
@@ -48,12 +48,12 @@
 
     <main>
         <section class="hero-block" aria-label="Послуга">
-            <div class="hero-bg" style="background: linear-gradient(120deg, rgba(0,0,0,0.78) 0%, rgba(0,0,0,0.64) 62%, rgba(255,230,0,0.32) 100%), url('/img/17.jpg') center/cover no-repeat; filter: grayscale(1);"></div>
+            <div class="hero-bg" style="background: linear-gradient(120deg, rgba(0,0,0,0.78) 0%, rgba(0,0,0,0.64) 62%, rgba(255,230,0,0.32) 100%), url('/img/17.jpg?v=20260115') center/cover no-repeat; filter: grayscale(1);"></div>
             <div class="container hero-inner">
-                <div class="hero-kicker">Послуга 17</div>
-                <h1 class="hero-title">Герметизація міжпанельних швів</h1>
+                <div class="hero-kicker">Послуга 14</div>
+                <h1 class="hero-title">Монтаж силового кабелю</h1>
                 <div class="hero-divider" aria-hidden="true"><span></span></div>
-                <p class="hero-subtitle">Відновлюємо герметичність швів, зменшуємо тепловтрати та захищаємо від вологи й протікань.</p>
+                <p class="hero-subtitle">Прокладання та надійне кріплення силових кабелів на фасадах, конструкціях і промислових об’єктах з дотриманням вимог безпеки.</p>
                 <div class="hero-actions">
                     <a href="/our-services/" class="hero-btn hero-btn-outline">ДО ВСІХ ПОСЛУГ</a>
                     <a href="/contacts/" class="hero-btn hero-btn-fill">ЗАМОВИТИ КОНСУЛЬТАЦІЮ</a>
@@ -63,9 +63,10 @@
 
         <section class="service-details" aria-label="Опис послуги">
             <div class="container">
-                <h2 class="section-title">17. Герметизація міжпанельних швів</h2>
+                <h2 class="section-title">14. Монтаж силового кабелю</h2>
                 <div class="service-prose">
-                    <p>Герметизація міжпанельних швів — ключовий елемент захисту будівель від вологи та втрат тепла. Ми використовуємо багатошарові системи утеплення та сучасні герметики з тривалим терміном служби.</p>
+                    <p>Монтаж силового кабелю на висоті потребує чіткого планування траси, надійного кріплення та суворого дотримання техніки безпеки. Виконуємо роботи методом промислового альпінізму там, де важко або неможливо використати підйомну техніку.</p>
+                    <p>Ми забезпечуємо акуратне прокладання кабелю вздовж фасадів і металоконструкцій, монтаж кріплень та організацію безпечних проходів. Працюємо відповідально, щоб кабельна лінія була захищена від механічних пошкоджень і погодних впливів.</p>
                 </div>
                 <div class="section-actions">
                     <a href="/contacts/" class="btn">Написати нам</a>
