--- a/en/our-projects.html
+++ b/en/our-projects.html
@@ -51,10 +51,10 @@
                 <h1>Projects</h1>
                 <p>A gallery of completed projects will be here (placeholder photos for now).</p>
                 <div class="gallery-list">
-                    <img src="/img/gallery1.jpg" alt="Project 1">
-                    <img src="/img/gallery2.jpg" alt="Project 2">
-                    <img src="/img/gallery3.jpg" alt="Project 3">
-                    <img src="/img/gallery4.jpg" alt="Project 4">
+                    <img src="/img/montazh.png" alt="Project 1">
+                    <img src="/img/repair-1.png" alt="Project 2">
+                    <img src="/img/paneli.jpg" alt="Project 3">
+                    <img src="/img/painting.png" alt="Project 4">
                 </div>
             </div>
         </section>
