--- a/en/service-06.html
+++ b/en/service-06.html
@@ -48,9 +48,9 @@
 
     <main>
         <section class="hero-block" aria-label="Service">
-            <div class="hero-bg" style="background: linear-gradient(120deg, rgba(0,0,0,0.78) 0%, rgba(0,0,0,0.64) 62%, rgba(255,230,0,0.32) 100%), url('/img/10.jpg') center/cover no-repeat; filter: grayscale(1);"></div>
+            <div class="hero-bg" style="background: linear-gradient(120deg, rgba(0,0,0,0.78) 0%, rgba(0,0,0,0.64) 62%, rgba(255,230,0,0.32) 100%), url('/img/5.jpg?v=20260115') center/cover no-repeat; filter: grayscale(1);"></div>
             <div class="container hero-inner">
-                <div class="hero-kicker">Service 06</div>
+                <div class="hero-kicker">Service 05</div>
                 <h1 class="hero-title">Roof repair & painting</h1>
                 <div class="hero-divider" aria-hidden="true"><span></span></div>
                 <p class="hero-subtitle">We repair roofs, eliminate leaks and paint roof elements to protect and refresh the appearance.</p>
