--- a/en/service-18.html
+++ b/en/service-18.html
@@ -48,9 +48,9 @@
 
     <main>
         <section class="hero-block" aria-label="Service">
-            <div class="hero-bg" style="background: linear-gradient(120deg, rgba(0,0,0,0.78) 0%, rgba(0,0,0,0.64) 62%, rgba(255,230,0,0.32) 100%), url('/img/18.jpg') center/cover no-repeat; filter: grayscale(1);"></div>
+            <div class="hero-bg" style="background: linear-gradient(120deg, rgba(0,0,0,0.78) 0%, rgba(0,0,0,0.64) 62%, rgba(255,230,0,0.32) 100%), url('/img/montazh-6.png') center/cover no-repeat; filter: grayscale(1);"></div>
             <div class="container hero-inner">
-                <div class="hero-kicker">Service 18</div>
+                <div class="hero-kicker">Service 15</div>
                 <h1 class="hero-title">Decorations & lighting installation</h1>
                 <div class="hero-divider" aria-hidden="true"><span></span></div>
                 <p class="hero-subtitle">We install decorations and lighting at height: fastening, cabling if needed, testing and safe dismantling.</p>
