--- a/en/solar-panels.html
+++ b/en/solar-panels.html
@@ -50,7 +50,7 @@
 
     <main>
         <section class="hero-block" aria-label="Service">
-            <div class="hero-bg" style="background: linear-gradient(120deg, rgba(0,0,0,0.78) 0%, rgba(0,0,0,0.64) 62%, rgba(255,230,0,0.32) 100%), url('/img/16.jpg') center/cover no-repeat; filter: grayscale(1);"></div>
+            <div class="hero-bg" style="background: linear-gradient(120deg, rgba(0,0,0,0.78) 0%, rgba(0,0,0,0.64) 62%, rgba(255,230,0,0.32) 100%), url('/img/13.jpg?v=20260115') center/cover no-repeat; filter: grayscale(1);"></div>
             <div class="container hero-inner">
                 <div class="hero-kicker">Service</div>
                 <h1 class="hero-title">Solar panel installation</h1>
