--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>alpiK — Головна</title>
     <link rel="stylesheet" href="/style.css">
+    <link rel="icon" href="/img/logo1.png" type="image/png">
+    <link rel="apple-touch-icon" href="/img/logo1.png">
 <!-- i18n-seo:start -->
 <link rel="canonical" href="https://alpik.com.ua/">
 <link rel="alternate" hreflang="uk" href="https://alpik.com.ua/">
@@ -51,9 +53,9 @@
         <section class="hero-block">
             <div class="hero-bg"></div>
             <div class="container hero-inner">
-                <h1 class="hero-title">Якісне виконання висотних робіт</h1>
-                <p class="hero-subtitle">Клієнти оцінили професіоналізм «alpiK»,<br>адже наші відносини побудовані на
-                    партнерстві та довірі</p>
+                <h1 class="hero-title">Висотні роботи будь-якої складності — коли інші не можуть, ми виконуємо</h1>
+                <p class="hero-subtitle">Фасадні роботи, промисловий альпінізм, монтаж і демонтаж на висоті.<br>
+                    Працюємо там, де інші відмовляються.</p>
                 <div class="hero-divider" aria-hidden="true"><span></span></div>
                 <div class="hero-actions">
                     <a href="/contacts/" class="hero-btn hero-btn-outline">НАПИСАТИ НАМ</a>
@@ -68,7 +70,7 @@
                 <div class="services-list">
                     <div class="service-item">
                         <div class="service-img">
-                            <img src="/img/montzah.png" alt="Монтаж" loading="lazy">
+                            <img src="/img/montazh.png" alt="Монтаж" loading="lazy">
                         </div>
                         <h3>Монтаж</h3>
                         <p>водостічних систем, відливів, світлопрозорих конструкцій, тощо</p>
@@ -93,7 +95,7 @@
                     </div>
                     <div class="service-item">
                         <div class="service-img">
-                            <img src="/img/remont.png" alt="Ремонт" loading="lazy">
+                                <img src="/img/repair-1.png?v=20260115" alt="Ремонт" loading="lazy">
                         </div>
                         <h3>Ремонт</h3>
                         <p>димових труб, елеваторів, силосів, тощо</p>
@@ -101,7 +103,7 @@
                     </div>
                     <div class="service-item">
                         <div class="service-img">
-                            <img src="/img/cleaning-snow.png" alt="Очищення дахів" loading="lazy">
+                            <img src="/img/11.jpg?v=20260115" alt="Очищення дахів" loading="lazy">
                         </div>
                         <h3>Очищення дахів</h3>
                         <p>Від снігу, борульок, листя та інших забруднень.</p>
