--- a/repair.html
+++ b/repair.html
@@ -50,7 +50,7 @@
 
     <main>
         <section class="hero-block" aria-label="Ремонтні роботи">
-            <div class="hero-bg" style="background: linear-gradient(120deg, rgba(0,0,0,0.78) 0%, rgba(0,0,0,0.64) 62%, rgba(255,230,0,0.32) 100%), url('/img/2.jpg') center/cover no-repeat; filter: grayscale(1);"></div>
+            <div class="hero-bg" style="background: linear-gradient(120deg, rgba(0,0,0,0.78) 0%, rgba(0,0,0,0.64) 62%, rgba(255,230,0,0.32) 100%), url('/img/5.jpg?v=20260115') center/cover no-repeat; filter: grayscale(1);"></div>
             <div class="container hero-inner">
                 <div class="hero-kicker">Послуга</div>
                 <h1 class="hero-title">Ремонтні роботи</h1>
@@ -69,21 +69,17 @@
                 <p class="services-catalog-lead">Оберіть напрямок ремонту — підкажемо оптимальне рішення і прорахуємо вартість.</p>
 
                 <div class="services-catalog services-catalog--uniform" role="list">
-                    <a class="services-catalog-card" role="listitem" href="/service-02/" aria-label="Ремонт і модернізація димових труб">
+                    <a class="services-catalog-card" style="--service-thumb: url('/img/1.jpg?v=20260115');" role="listitem" href="/service-02/" aria-label="Ремонт і модернізація димових труб">
                         <div class="services-catalog-num">01</div>
                         <h3 class="services-catalog-title">Ремонт і модернізація димових труб</h3>
                     </a>
-                    <a class="services-catalog-card" role="listitem" href="/service-05/" aria-label="Комплексний ремонт елеваторів; очищення та ремонт силосів">
-                        <div class="services-catalog-num">02</div>
+                    <a class="services-catalog-card" style="--service-thumb: url('/img/4.jpg?v=20260115');" role="listitem" href="/service-05/" aria-label="Комплексний ремонт елеваторів; очищення та ремонт силосів">
+                        <div class="services-catalog-num">04</div>
                         <h3 class="services-catalog-title">Комплексний ремонт елеваторів; очищення та ремонт силосів</h3>
                     </a>
-                    <a class="services-catalog-card" role="listitem" href="/service-06/" aria-label="Ремонт і фарбування дахів">
-                        <div class="services-catalog-num">03</div>
+                    <a class="services-catalog-card" style="--service-thumb: url('/img/5.jpg?v=20260115');" role="listitem" href="/service-06/" aria-label="Ремонт і фарбування дахів">
+                        <div class="services-catalog-num">05</div>
                         <h3 class="services-catalog-title">Ремонт і фарбування дахів</h3>
-                    </a>
-                    <a class="services-catalog-card" role="listitem" href="/service-17/" aria-label="Герметизація міжпанельних швів">
-                        <div class="services-catalog-num">04</div>
-                        <h3 class="services-catalog-title">Герметизація міжпанельних швів</h3>
                     </a>
                 </div>
             </div>
