--- a/service-03.html
+++ b/service-03.html
@@ -48,9 +48,9 @@
 
     <main>
         <section class="hero-block" aria-label="Послуга">
-            <div class="hero-bg" style="background: linear-gradient(120deg, rgba(0,0,0,0.78) 0%, rgba(0,0,0,0.64) 62%, rgba(255,230,0,0.32) 100%), url('/img/3.jpg') center/cover no-repeat; filter: grayscale(1);"></div>
+            <div class="hero-bg" style="background: linear-gradient(120deg, rgba(0,0,0,0.78) 0%, rgba(0,0,0,0.64) 62%, rgba(255,230,0,0.32) 100%), url('/img/montazh-1.png') center/cover no-repeat; filter: grayscale(1);"></div>
             <div class="container hero-inner">
-                <div class="hero-kicker">Послуга 03</div>
+                <div class="hero-kicker">Послуга 02</div>
                 <h1 class="hero-title">Монтаж димоходів і повітропроводів</h1>
                 <div class="hero-divider" aria-hidden="true"><span></span></div>
                 <p class="hero-subtitle">Монтуємо димоходи та повітропроводи на висоті — акуратно, швидко і з дотриманням норм.</p>
@@ -63,7 +63,7 @@
 
         <section class="service-details" aria-label="Опис послуги">
             <div class="container">
-                <h2 class="section-title">03. Монтаж димоходів і повітропроводів</h2>
+                <h2 class="section-title">02. Монтаж димоходів і повітропроводів</h2>
                 <div class="service-prose">
                     <p>Монтаж димоходів і повітропроводів здійснюється відповідно до проєктної документації, норм ДБН та вимог пожежної безпеки. Перед початком робіт проводиться інженерна підготовка, розмітка трас та підбір оптимальних рішень з урахуванням умов експлуатації.</p>
                     <p>Ми використовуємо нержавіючі, оцинковані та сендвіч-системи з теплоізоляцією, які забезпечують довговічність і безпечну роботу систем. Особлива увага приділяється герметичності стиків, правильному ухилу, надійному кріпленню та захисту від конденсату.</p>
