--- a/service-13.html
+++ b/service-13.html
@@ -48,9 +48,9 @@
 
     <main>
         <section class="hero-block" aria-label="Послуга">
-            <div class="hero-bg" style="background: linear-gradient(120deg, rgba(0,0,0,0.78) 0%, rgba(0,0,0,0.64) 62%, rgba(255,230,0,0.32) 100%), url('/img/13.jpg') center/cover no-repeat; filter: grayscale(1);"></div>
+            <div class="hero-bg" style="background: linear-gradient(120deg, rgba(0,0,0,0.78) 0%, rgba(0,0,0,0.64) 62%, rgba(255,230,0,0.32) 100%), url('/img/montazh-5.png') center/cover no-repeat; filter: grayscale(1);"></div>
             <div class="container hero-inner">
-                <div class="hero-kicker">Послуга 13</div>
+                <div class="hero-kicker">Послуга 10</div>
                 <h1 class="hero-title">Монтаж рекламних конструкцій, навішування банерів</h1>
                 <div class="hero-divider" aria-hidden="true"><span></span></div>
                 <p class="hero-subtitle">Встановлюємо рекламні конструкції та виконуємо навішування банерів на висоті — швидко, акуратно і безпечно.</p>
@@ -63,7 +63,7 @@
 
         <section class="service-details" aria-label="Опис послуги">
             <div class="container">
-                <h2 class="section-title">13. Монтаж рекламних конструкцій, навішування банерів</h2>
+                <h2 class="section-title">10. Монтаж рекламних конструкцій, навішування банерів</h2>
                 <div class="service-prose">
                     <p>Ми здійснюємо монтаж рекламних конструкцій будь-якої складності на фасадах і висотних об’єктах. Використовуються міцні металеві каркаси, анкерні системи та стійкі до вітрових навантажень матеріали.</p>
                     <p>Усі роботи виконуються з повним дотриманням норм безпеки та вимог замовника.</p>
