--- a/service-14.html
+++ b/service-14.html
@@ -48,9 +48,9 @@
 
     <main>
         <section class="hero-block" aria-label="Послуга">
-            <div class="hero-bg" style="background: linear-gradient(120deg, rgba(0,0,0,0.78) 0%, rgba(0,0,0,0.64) 62%, rgba(255,230,0,0.32) 100%), url('/img/14.jpg') center/cover no-repeat; filter: grayscale(1);"></div>
+            <div class="hero-bg" style="background: linear-gradient(120deg, rgba(0,0,0,0.78) 0%, rgba(0,0,0,0.64) 62%, rgba(255,230,0,0.32) 100%), url('/img/11.jpg?v=20260115') center/cover no-repeat; filter: grayscale(1);"></div>
             <div class="container hero-inner">
-                <div class="hero-kicker">Послуга 14</div>
+                <div class="hero-kicker">Послуга 11</div>
                 <h1 class="hero-title">Очищення снігу, бурульок і наледі з покрівлі та конструкцій</h1>
                 <div class="hero-divider" aria-hidden="true"><span></span></div>
                 <p class="hero-subtitle">Оперативно та безпечно очищаємо покрівлі й конструкції від снігу, бурульок та наледі, організовуючи безпечну зону.</p>
@@ -63,7 +63,7 @@
 
         <section class="service-details" aria-label="Опис послуги">
             <div class="container">
-                <h2 class="section-title">14. Очищення снігу, бурульок і наледі з покрівлі та конструкцій</h2>
+                <h2 class="section-title">11. Очищення снігу, бурульок і наледі з покрівлі та конструкцій</h2>
                 <div class="service-prose">
                     <p>Очищення виконується професійними альпіністами з використанням страхувальних систем. Роботи проводяться без пошкодження покрівельних матеріалів і з максимальним рівнем безпеки для людей та майна.</p>
                 </div>
