--- a/service-18.html
+++ b/service-18.html
@@ -48,9 +48,9 @@
 
     <main>
         <section class="hero-block" aria-label="Послуга">
-            <div class="hero-bg" style="background: linear-gradient(120deg, rgba(0,0,0,0.78) 0%, rgba(0,0,0,0.64) 62%, rgba(255,230,0,0.32) 100%), url('/img/18.jpg') center/cover no-repeat; filter: grayscale(1);"></div>
+            <div class="hero-bg" style="background: linear-gradient(120deg, rgba(0,0,0,0.78) 0%, rgba(0,0,0,0.64) 62%, rgba(255,230,0,0.32) 100%), url('/img/montazh-6.png') center/cover no-repeat; filter: grayscale(1);"></div>
             <div class="container hero-inner">
-                <div class="hero-kicker">Послуга 18</div>
+                <div class="hero-kicker">Послуга 15</div>
                 <h1 class="hero-title">Монтаж декорацій і освітлення</h1>
                 <div class="hero-divider" aria-hidden="true"><span></span></div>
                 <p class="hero-subtitle">Монтуємо декорації та освітлення на висоті: кріплення, прокладка кабелю (за потреби), перевірка та безпечний демонтаж.</p>
@@ -63,7 +63,7 @@
 
         <section class="service-details" aria-label="Опис послуги">
             <div class="container">
-                <h2 class="section-title">18. Монтаж декорацій і освітлення</h2>
+                <h2 class="section-title">15. Монтаж декорацій і освітлення</h2>
                 <div class="service-prose">
                     <p>Ми виконуємо монтаж архітектурного, декоративного та святкового освітлення будь-якої складності. Застосовуються енергоефективні LED-системи, захищені кабельні траси та надійні кріплення, що гарантують безпечну та стабільну роботу.</p>
                 </div>
